changing mobile padding for top to 0 to fix visible gap

--- a/src/components/AlertsList/AlertsList.css
+++ b/src/components/AlertsList/AlertsList.css
@@ -820,7 +820,7 @@
 
     .alerts-panel {
         width: 100%;
-        top: 56px;
+        top: 0;
         z-index: 1000;
     }
 
